--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
